--- a/week1/shopper.html
+++ b/week1/shopper.html
@@ -4,6 +4,7 @@
         
     </head>
     <body>
+        <h1>Data Structures and Variables</h1>
         <script src="shopper.js"></script>
     </body>
 </html>
